added generation from image and docx
